                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 24-09-2006 fixed: memory leak when exiting credits
 - 24-09-2006 fixed: leaving the screensaver could cause black screens for non-dimmed screensaver modes
 - 24-09-2006 fixed: url parser choked on http urls containing ;, #, also for urls with ? but no filename after host
 - 24-09-2006 fixed: item 7 was not remembered in large item view
 - 24-09-2006 fixed: no sound when playing dvr-ms files ( switched back to mplayer demuxer with fix for it's choppy playback )
 - 24-09-2006 updated: Hungarian language file (Thnx to bali001)
 - 24-09-2006 updated: Indonesian language file (Thnx to djoens)
 - 24-09-2006 updated: Spanish language file (Thnx to jose_t)
 - 24-09-2006 updated: Slovenian language file (Thnx to xsiluro)
 - 23-09-2006 fixed: Context menu for playlists wasn't quite right.
 - 23-09-2006 fixed: Textbox wasn't correctly aligned in python, and the line spacing was incorrect.
 - 23-09-2006 updated: German language file
 - 21-09-2006 fixed: video settings weren't saved if you skipped file (ACTION_NEXT_ITEM, ACTION_PREV_ITEM).
 - 21-09-2006 fixed: Wordwrapping added an extra (unnecessary) linebreak.  Thanks to Kryzys
 - 21-09-2006 fixed: <origin> tag wasn't reset in windows that didn't have them when loading skin.
 - 21-09-2006 fixed: [ 1562562 ] .cdg disappears when restarting song
 - 20-09-2006 fixed: mockup with nav sounds and changing profiles.
 - 20-09-2006 updated: German language file
 - 19-09-2006 fixed: UPnP client now supports UPnP Media Servers with a description doc url other than root (and no URLBase in description doc)
 - 19-09-2006 fixed: Play on folder could cause it to start paused in My Videos